appId: com.gcaguilar.biciradar.ios
---
- launchApp

- tapOn:
    text: "Seguir con la configuración"
    optional: true
    waitUntilVisible: true

- tapOn:
    text: "Más tarde"
    optional: true
    waitUntilVisible: true
- tapOn:
    text: "Más tarde"
    optional: true
    waitUntilVisible: true
- tapOn:
    text: "Más tarde"
    optional: true
    waitUntilVisible: true
- tapOn:
    text: "Más tarde"
    optional: true
    waitUntilVisible: true
- tapOn:
    text: "Empezar"
    optional: true
    waitUntilVisible: true

- tapOn:
    text: "Ahora no"
    optional: true
- tapOn:
    text: "Entendido"
    optional: true
- tapOn:
    text: "Cerrar"
    optional: true
- tapOn:
    text: "Mapa"
    optional: true

- assertVisible: "Buscar estación o dirección"
- assertVisible: "Mapa"
